--- a/css/main.css
+++ b/css/main.css
@@ -12025,6 +12025,7 @@ a.full-width-icon:hover .social-text {
 	.content-block {
 		padding-top: 7.5rem;
 		padding-bottom: 7.5rem;
+		background-color: #000;
 	}
 
 	.work-block {
