--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -279,7 +279,7 @@ body {
   font-weight: normal;
   line-height: 1.5;
   color: #292b2c;
-  background-color: #fff; }
+  background-color: #FFE7E7; }
 
 [tabindex="-1"]:focus {
   outline: none !important; }
