--- a/css/main.css
+++ b/css/main.css
@@ -840,7 +840,7 @@ img {
 }
 
 a {
-	color: #723f03;
+	color: #332a79;
 	text-decoration: none;
 	outline: none;
 	-webkit-transition: all linear .2s;
@@ -4249,7 +4249,7 @@ em.state-invalid {
 }
 
 .btn.btn-trans-dark-gray {
-	border: .1429rem solid #878585;
+	border: .1429rem solid #ffffff;
 	background: none;
 }
 
@@ -4258,8 +4258,8 @@ em.state-invalid {
 }
 
 .btn.btn-black {
-	background: #915d12;
-	border: .1429rem solid #915d12;
+	background: #332a79;
+	border: .1429rem solid #332a79;
 	color: #fff;
 }
 
@@ -4754,7 +4754,7 @@ em.state-invalid {
 color: floralwhite;
 }
 .content-block {
-	background-color: #151515;
+	background-color: #000;
 	padding-top: 3.75rem;
 	padding-bottom: 3.75rem;
 }
@@ -5595,7 +5595,7 @@ pre {
 }
 
 .about-banner {
-	background-image: url('../img/visual-small-01.jpg');
+	background-image: url('../img/movies.png');
 }
 
 .portfolio-banner {
@@ -6558,30 +6558,30 @@ input:focus:-ms-input-placeholder,textarea:focus:-ms-input-placeholder {
 .waituk_newsletter-form .btn.btn-trans-dark-gray {
 	line-height: 1.2;
 	padding: .9rem 1.071rem .7rem;
-	color: #0f30d3;
+	color: #ffffff;
 }
 
 .waituk_newsletter-form input[type='email'] {
 	background: none;
 	color: #f1f1f1;
-	border-color: #878585;
+	border-color: #ffffff;
 	letter-spacing: 0rem;
 }
 
 .waituk_newsletter-form ::-webkit-input-placeholder {
-	color: #55565b;
+	color: #ffffff;
 }
 
 .waituk_newsletter-form :-moz-placeholder {
-	color: #55565b;
+	color: #ffffff;
 }
 
 .waituk_newsletter-form ::-moz-placeholder {
-	color: #55565b;
+	color: #ffffff;
 }
 
 .waituk_newsletter-form :-ms-input-placeholder {
-	color: #55565b;
+	color: #ffffff;
 }
 
 .waituk_newsletter-form.newsletter-v1 {
@@ -6690,7 +6690,7 @@ input:focus:-ms-input-placeholder,textarea:focus:-ms-input-placeholder {
 	right: 0;
 	text-align: right;
 	color: #fff;
-	background: #212121;
+	background: #332a79;
 	width: 4rem;
 	padding: .715rem .9rem;
 	line-height: 1.3;
@@ -6774,7 +6774,7 @@ input:focus:-ms-input-placeholder,textarea:focus:-ms-input-placeholder {
 }
 
 .social-network a {
-	color: #55565b;
+	color: #2f2772;
 }
 
 .social-network a:hover {
@@ -9907,7 +9907,7 @@ a.full-width-icon:hover .social-text {
 
 .footer .footer-main {
 	/*background: $footer-bg-image;*/
-	background-color: #000;
+	background-color: #513893;
 	position: relative;
 	color: #fff;
 	z-index: 2;
@@ -9918,7 +9918,7 @@ a.full-width-icon:hover .social-text {
 }
 
 .footer .footer-main p a {
-	color: #7d7d7d;
+	color: #fff;
 }
 
 .footer .footer-main p a:hover {
@@ -9934,11 +9934,11 @@ a.full-width-icon:hover .social-text {
 
 .footer .footer-main .holder p {
 	margin: 0;
-	color: #7d7d7d;
+	color: #fff;
 }
 
 .footer .footer-main .holder p a {
-	color: #7d7d7d;
+	color: #fff;
 }
 
 .footer .footer-main .holder p a:hover {
@@ -9958,7 +9958,7 @@ a.full-width-icon:hover .social-text {
 }
 
 .footer .footer-main h4 {
-	color: #7d7d7d;
+	color: #fff;
 	font-size: 1.25rem;
 	margin-top: 1.25rem;
 }
@@ -9968,7 +9968,7 @@ a.full-width-icon:hover .social-text {
 }
 
 .footer .divider-border {
-	background: #242424;
+	background: #fff;
 	margin: 1.875rem auto;
 }
 
@@ -9978,12 +9978,12 @@ a.full-width-icon:hover .social-text {
 
 .footer .footer-bottom {
 	padding: 1.875rem 0;
-	background: #212121;
+	background: #2f2772;
 }
 
 .footer .footer-bottom p {
 	margin: 0;
-	color: #7d7d7d;
+	color: #fff;
 }
 
 .footer .widget-block h4 {
