--- a/css/main.css
+++ b/css/main.css
@@ -860,7 +860,7 @@ body {
 	font-weight: 400;
 	font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	letter-spacing: .0625rem;
-	color: #55565b;
+	color: #ddd;
 	font-size: .75rem;
 	line-height: 2.1;
 }
@@ -868,7 +868,7 @@ body {
 h1,h2,h3,h4,h5,h6 {
 	margin: 0 0 .9375rem;
 	font-family: 'Josefin Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	color: #55565b;
+	color: #eceeef;
 	line-height: 1.1;
 }
 
@@ -4216,8 +4216,8 @@ em.state-invalid {
 }
 
 .btn.btn-primary {
-	background: #f0ad4ec4;
-	border-color: #966725;
+	background: #4e8ff0c4;
+	border-color: #0044cc00;
 	color: #fff;
 }
 
@@ -5238,12 +5238,12 @@ pre {
 }
 
 .heading h2 {
-	color: #55565b;
+	color: #f9f9f9;
 	font-weight: 700;
 }
 
 .heading h2 span {
-	color: #5645ff;
+	color: #4e8ff0c4;
 }
 
 /******* icon box styles *******/
