--- a/css/main.css
+++ b/css/main.css
@@ -840,7 +840,7 @@ img {
 }
 
 a {
-	color: #332a79;
+	color: #723f03;
 	text-decoration: none;
 	outline: none;
 	-webkit-transition: all linear .2s;
@@ -860,7 +860,7 @@ body {
 	font-weight: 400;
 	font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	letter-spacing: .0625rem;
-	color: #ddd;
+	color: #55565b;
 	font-size: .75rem;
 	line-height: 2.1;
 }
@@ -868,7 +868,7 @@ body {
 h1,h2,h3,h4,h5,h6 {
 	margin: 0 0 .9375rem;
 	font-family: 'Josefin Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	color: #eceeef;
+	color: #55565b;
 	line-height: 1.1;
 }
 
@@ -4216,8 +4216,8 @@ em.state-invalid {
 }
 
 .btn.btn-primary {
-	background: #4e8ff0c4;
-	border-color: #0044cc00;
+	background: #f0ad4ec4;
+	border-color: #966725;
 	color: #fff;
 }
 
@@ -4249,7 +4249,7 @@ em.state-invalid {
 }
 
 .btn.btn-trans-dark-gray {
-	border: .1429rem solid #ffffff;
+	border: .1429rem solid #212121;
 	background: none;
 }
 
@@ -4258,8 +4258,8 @@ em.state-invalid {
 }
 
 .btn.btn-black {
-	background: #332a79;
-	border: .1429rem solid #332a79;
+	background: #915d12;
+	border: .1429rem solid #915d12;
 	color: #fff;
 }
 
@@ -4754,7 +4754,7 @@ em.state-invalid {
 color: floralwhite;
 }
 .content-block {
-	background-color: #000;
+	background-color: #AD1E00;
 	padding-top: 3.75rem;
 	padding-bottom: 3.75rem;
 }
@@ -5238,12 +5238,12 @@ pre {
 }
 
 .heading h2 {
-	color: #f9f9f9;
+	color: #55565b;
 	font-weight: 700;
 }
 
 .heading h2 span {
-	color: #4e8ff0c4;
+	color: #5645ff;
 }
 
 /******* icon box styles *******/
@@ -5551,8 +5551,8 @@ pre {
 }
 
 .visual-banner-v13 {
-	background-image: url('../img/visual-small-14.jpg');
-}
+	  background-image: url("../img/tania_gonzalez/fondo.jpg"); }
+
 
 .visual-banner-v14 {
 	background-image: url('../img/visual-small-15.jpg');
@@ -5595,7 +5595,7 @@ pre {
 }
 
 .about-banner {
-	background-image: url('../img/movies.png');
+	background-image: url('../img/visual-small-01.jpg');
 }
 
 .portfolio-banner {
@@ -6558,30 +6558,30 @@ input:focus:-ms-input-placeholder,textarea:focus:-ms-input-placeholder {
 .waituk_newsletter-form .btn.btn-trans-dark-gray {
 	line-height: 1.2;
 	padding: .9rem 1.071rem .7rem;
-	color: #ffffff;
+	color: #55565b;
 }
 
 .waituk_newsletter-form input[type='email'] {
 	background: none;
 	color: #f1f1f1;
-	border-color: #ffffff;
+	border-color: #f1f1f1;
 	letter-spacing: 0rem;
 }
 
 .waituk_newsletter-form ::-webkit-input-placeholder {
-	color: #ffffff;
+	color: #55565b;
 }
 
 .waituk_newsletter-form :-moz-placeholder {
-	color: #ffffff;
+	color: #55565b;
 }
 
 .waituk_newsletter-form ::-moz-placeholder {
-	color: #ffffff;
+	color: #55565b;
 }
 
 .waituk_newsletter-form :-ms-input-placeholder {
-	color: #ffffff;
+	color: #55565b;
 }
 
 .waituk_newsletter-form.newsletter-v1 {
@@ -6690,7 +6690,7 @@ input:focus:-ms-input-placeholder,textarea:focus:-ms-input-placeholder {
 	right: 0;
 	text-align: right;
 	color: #fff;
-	background: #332a79;
+	background: #212121;
 	width: 4rem;
 	padding: .715rem .9rem;
 	line-height: 1.3;
@@ -6758,7 +6758,6 @@ input:focus:-ms-input-placeholder,textarea:focus:-ms-input-placeholder {
 .social-network {
 	font-size: 1.25rem;
 	line-height: 1.2;
-	padding-top: 60px;
 }
 
 .social-network li {
@@ -6774,7 +6773,7 @@ input:focus:-ms-input-placeholder,textarea:focus:-ms-input-placeholder {
 }
 
 .social-network a {
-	color: #2f2772;
+	color: #55565b;
 }
 
 .social-network a:hover {
@@ -6792,7 +6791,7 @@ input:focus:-ms-input-placeholder,textarea:focus:-ms-input-placeholder {
 }
 
 .social-network a:hover .icon-twitter {
-	color: #1da1f2;
+	color: #03619A;
 }
 
 .social-network a:hover .icon-google-plus {
@@ -6926,7 +6925,7 @@ a.full-width-icon.fb {
 }
 
 a.full-width-icon.twt {
-	background: #1da1f2;
+	background: #03619A;
 }
 
 a.full-width-icon.pin {
@@ -9907,18 +9906,19 @@ a.full-width-icon:hover .social-text {
 
 .footer .footer-main {
 	/*background: $footer-bg-image;*/
-	background-color: #513893;
+	background-color: #03619A;
 	position: relative;
 	color: #fff;
 	z-index: 2;
 }
+
 .footer .footer-main p {
 	margin: 0;
 	color: #fff;
 }
 
 .footer .footer-main p a {
-	color: #fff;
+	color: #7d7d7d;
 }
 
 .footer .footer-main p a:hover {
@@ -9934,11 +9934,11 @@ a.full-width-icon:hover .social-text {
 
 .footer .footer-main .holder p {
 	margin: 0;
-	color: #fff;
+	color: #7d7d7d;
 }
 
 .footer .footer-main .holder p a {
-	color: #fff;
+	color: #7d7d7d;
 }
 
 .footer .footer-main .holder p a:hover {
@@ -9958,7 +9958,7 @@ a.full-width-icon:hover .social-text {
 }
 
 .footer .footer-main h4 {
-	color: #fff;
+	color: #7d7d7d;
 	font-size: 1.25rem;
 	margin-top: 1.25rem;
 }
@@ -9968,7 +9968,7 @@ a.full-width-icon:hover .social-text {
 }
 
 .footer .divider-border {
-	background: #fff;
+	background: #242424;
 	margin: 1.875rem auto;
 }
 
@@ -9978,12 +9978,12 @@ a.full-width-icon:hover .social-text {
 
 .footer .footer-bottom {
 	padding: 1.875rem 0;
-	background: #2f2772;
+	background: #212121;
 }
 
 .footer .footer-bottom p {
 	margin: 0;
-	color: #fff;
+	color: #7d7d7d;
 }
 
 .footer .widget-block h4 {
@@ -10049,7 +10049,7 @@ a.full-width-icon:hover .social-text {
 }
 
 .footer-v1 .footer-main {
-	background: ##80520f;
+	background: #f1f1f1;
 }
 
 .footer-v2 .btn.btn-trans-dark-gray {
