--- a/css/main.css
+++ b/css/main.css
@@ -868,7 +868,7 @@ body {
 h1,h2,h3,h4,h5,h6 {
 	margin: 0 0 .9375rem;
 	font-family: 'Josefin Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	color: #eceeef;
+	color: #000000;
 	line-height: 1.1;
 }
 
@@ -6558,7 +6558,7 @@ input:focus:-ms-input-placeholder,textarea:focus:-ms-input-placeholder {
 .waituk_newsletter-form .btn.btn-trans-dark-gray {
 	line-height: 1.2;
 	padding: .9rem 1.071rem .7rem;
-	color: #ffffff;
+	color: #0089eb;
 }
 
 .waituk_newsletter-form input[type='email'] {
@@ -9907,7 +9907,7 @@ a.full-width-icon:hover .social-text {
 
 .footer .footer-main {
 	/*background: $footer-bg-image;*/
-	background-color: #513893;
+	background-color: #404040	;
 	position: relative;
 	color: #fff;
 	z-index: 2;
@@ -9978,7 +9978,7 @@ a.full-width-icon:hover .social-text {
 
 .footer .footer-bottom {
 	padding: 1.875rem 0;
-	background: #2f2772;
+	background: #000;
 }
 
 .footer .footer-bottom p {
