--- a/css/main.css
+++ b/css/main.css
@@ -4216,8 +4216,8 @@ em.state-invalid {
 }
 
 .btn.btn-primary {
-	background: #5645ff;
-	border-color: #5645ff;
+	background: #d17fb8;
+	border-color: #d17fb8;
 	color: #fff;
 }
 
@@ -5239,7 +5239,7 @@ pre {
 }
 
 .heading h2 span {
-	color: #5645ff;
+	color: #d17fb8;
 }
 
 /******* icon box styles *******/
