Revert "CAMBIO IMAGEN"
This reverts commit 318d1a7a1f155dba9a73d6847eff49c6ffb36bb2.

--- a/css/main.css
+++ b/css/main.css
@@ -5599,7 +5599,7 @@ pre {
 }
 
 .portfolio-banner-v1 {
-	background-image: url('../img/CHEF\ PASTEL.jpg');
+	background-image: url('../img/visual-small-04.jpg');
 }
 
 .portfolio-banner-v2 {
